projekt/idea/folder1/MiniJavaParser.py
# Generated from C:/Users/admin/PycharmProjects/MiniJava/projekt/idea/MiniJava.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniJavaParser ( Parser ):

    grammarFileName = "MiniJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'char'", "'string'", "'float'", 
                     "'bool'", "'print('", "'else if'", "'else'", "'while'", 
                     "'for('", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'?'", 
                     "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", 
                     "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'+='", 
                     "'-='", "'*='", "'/='", "'if'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMICOLON", 
                      "COMMA", "DOT", "ASSIGN", "GT", "LT", "NOT", "QUESTION", 
                      "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", 
                      "DEC", "ADD", "SUB", "MUL", "DIV", "MOD", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "IF", "WS", 
                      "INT", "STRING", "BOOL", "FLOAT", "CHAR", "VARIABLE" ]

    RULE_prog = 0
    RULE_declaration = 1
    RULE_tempDeclaration = 2
    RULE_assignments = 3
    RULE_assignmentsFor = 4
    RULE_arithmetics = 5
    RULE_logical = 6
    RULE_print = 7
    RULE_conditionals = 8
    RULE_conditionalsExtend = 9
    RULE_whileloop = 10
    RULE_forloop = 11

    ruleNames =  [ "prog", "declaration", "tempDeclaration", "assignments", 
                   "assignmentsFor", "arithmetics", "logical", "print", 
                   "conditionals", "conditionalsExtend", "whileloop", "forloop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    LPAREN=11
    RPAREN=12
    LBRACE=13
    RBRACE=14
    LBRACK=15
    RBRACK=16
    SEMICOLON=17
    COMMA=18
    DOT=19
    ASSIGN=20
    GT=21
    LT=22
    NOT=23
    QUESTION=24
    EQUAL=25
    LE=26
    GE=27
    NOTEQUAL=28
    AND=29
    OR=30
    INC=31
    DEC=32
    ADD=33
    SUB=34
    MUL=35
    DIV=36
    MOD=37
    ADD_ASSIGN=38
    SUB_ASSIGN=39
    MUL_ASSIGN=40
    DIV_ASSIGN=41
    IF=42
    WS=43
    INT=44
    STRING=45
    BOOL=46
    FLOAT=47
    CHAR=48
    VARIABLE=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetics(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ArithmeticsContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ArithmeticsContext,i)


        def print_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.PrintContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.PrintContext,i)


        def logical(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.LogicalContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.LogicalContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.DeclarationContext,i)


        def conditionals(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ConditionalsContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ConditionalsContext,i)


        def assignments(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.AssignmentsContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.AssignmentsContext,i)


        def forloop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ForloopContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ForloopContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = MiniJavaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 796046426901630) != 0):
                self.state = 31
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 24
                    self.arithmetics(0)
                    pass

                elif la_ == 2:
                    self.state = 25
                    self.print_()
                    pass

                elif la_ == 3:
                    self.state = 26
                    self.logical(0)
                    pass

                elif la_ == 4:
                    self.state = 27
                    self.declaration()
                    pass

                elif la_ == 5:
                    self.state = 28
                    self.conditionals()
                    pass

                elif la_ == 6:
                    self.state = 29
                    self.assignments()
                    pass

                elif la_ == 7:
                    self.state = 30
                    self.forloop()
                    pass


                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FloatDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def FLOAT(self):
            return self.getToken(MiniJavaParser.FLOAT, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatDeclaration" ):
                listener.enterFloatDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatDeclaration" ):
                listener.exitFloatDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatDeclaration" ):
                return visitor.visitFloatDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class CharDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def CHAR(self):
            return self.getToken(MiniJavaParser.CHAR, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCharDeclaration" ):
                listener.enterCharDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCharDeclaration" ):
                listener.exitCharDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharDeclaration" ):
                return visitor.visitCharDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class StringDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def STRING(self):
            return self.getToken(MiniJavaParser.STRING, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringDeclaration" ):
                listener.enterStringDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringDeclaration" ):
                listener.exitStringDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringDeclaration" ):
                return visitor.visitStringDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class BoolDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def BOOL(self):
            return self.getToken(MiniJavaParser.BOOL, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolDeclaration" ):
                listener.enterBoolDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolDeclaration" ):
                listener.exitBoolDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolDeclaration" ):
                return visitor.visitBoolDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class IntDeclarationContext(DeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.DeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def INT(self):
            return self.getToken(MiniJavaParser.INT, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntDeclaration" ):
                listener.enterIntDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntDeclaration" ):
                listener.exitIntDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntDeclaration" ):
                return visitor.visitIntDeclaration(self)
            else:
                return visitor.visitChildren(self)



    def declaration(self):

        localctx = MiniJavaParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = MiniJavaParser.IntDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(MiniJavaParser.T__0)
                self.state = 37
                self.match(MiniJavaParser.VARIABLE)
                self.state = 38
                self.match(MiniJavaParser.ASSIGN)
                self.state = 39
                self.match(MiniJavaParser.INT)
                self.state = 40
                self.match(MiniJavaParser.SEMICOLON)
                pass
            elif token in [2]:
                localctx = MiniJavaParser.CharDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(MiniJavaParser.T__1)
                self.state = 42
                self.match(MiniJavaParser.VARIABLE)
                self.state = 43
                self.match(MiniJavaParser.ASSIGN)
                self.state = 44
                self.match(MiniJavaParser.CHAR)
                self.state = 45
                self.match(MiniJavaParser.SEMICOLON)
                pass
            elif token in [3]:
                localctx = MiniJavaParser.StringDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.match(MiniJavaParser.T__2)
                self.state = 47
                self.match(MiniJavaParser.VARIABLE)
                self.state = 48
                self.match(MiniJavaParser.ASSIGN)
                self.state = 49
                self.match(MiniJavaParser.STRING)
                self.state = 50
                self.match(MiniJavaParser.SEMICOLON)
                pass
            elif token in [4]:
                localctx = MiniJavaParser.FloatDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.match(MiniJavaParser.T__3)
                self.state = 52
                self.match(MiniJavaParser.VARIABLE)
                self.state = 53
                self.match(MiniJavaParser.ASSIGN)
                self.state = 54
                self.match(MiniJavaParser.FLOAT)
                self.state = 55
                self.match(MiniJavaParser.SEMICOLON)
                pass
            elif token in [5]:
                localctx = MiniJavaParser.BoolDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.match(MiniJavaParser.T__4)
                self.state = 57
                self.match(MiniJavaParser.VARIABLE)
                self.state = 58
                self.match(MiniJavaParser.ASSIGN)
                self.state = 59
                self.match(MiniJavaParser.BOOL)
                self.state = 60
                self.match(MiniJavaParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TempDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)

        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)

        def INT(self):
            return self.getToken(MiniJavaParser.INT, 0)

        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_tempDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTempDeclaration" ):
                listener.enterTempDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTempDeclaration" ):
                listener.exitTempDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTempDeclaration" ):
                return visitor.visitTempDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def tempDeclaration(self):

        localctx = MiniJavaParser.TempDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tempDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(MiniJavaParser.T__0)
            self.state = 64
            self.match(MiniJavaParser.VARIABLE)
            self.state = 65
            self.match(MiniJavaParser.ASSIGN)
            self.state = 66
            self.match(MiniJavaParser.INT)
            self.state = 67
            self.match(MiniJavaParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_assignments

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArithmeticsAssForContext(AssignmentsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AssignmentsContext
            super().__init__(parser)
            self.expr = None # ArithmeticsContext
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)
        def arithmetics(self):
            return self.getTypedRuleContext(MiniJavaParser.ArithmeticsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticsAssFor" ):
                listener.enterArithmeticsAssFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticsAssFor" ):
                listener.exitArithmeticsAssFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticsAssFor" ):
                return visitor.visitArithmeticsAssFor(self)
            else:
                return visitor.visitChildren(self)


    class StringAssContext(AssignmentsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AssignmentsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def STRING(self):
            return self.getToken(MiniJavaParser.STRING, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringAss" ):
                listener.enterStringAss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringAss" ):
                listener.exitStringAss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringAss" ):
                return visitor.visitStringAss(self)
            else:
                return visitor.visitChildren(self)


    class CharAssContext(AssignmentsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AssignmentsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def CHAR(self):
            return self.getToken(MiniJavaParser.CHAR, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCharAss" ):
                listener.enterCharAss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCharAss" ):
                listener.exitCharAss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharAss" ):
                return visitor.visitCharAss(self)
            else:
                return visitor.visitChildren(self)


    class LogicalAssContext(AssignmentsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AssignmentsContext
            super().__init__(parser)
            self.expr = None # LogicalContext
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def SEMICOLON(self):
            return self.getToken(MiniJavaParser.SEMICOLON, 0)
        def logical(self):
            return self.getTypedRuleContext(MiniJavaParser.LogicalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalAss" ):
                listener.enterLogicalAss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalAss" ):
                listener.exitLogicalAss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalAss" ):
                return visitor.visitLogicalAss(self)
            else:
                return visitor.visitChildren(self)



    def assignments(self):

        localctx = MiniJavaParser.AssignmentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignments)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = MiniJavaParser.ArithmeticsAssForContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(MiniJavaParser.VARIABLE)
                self.state = 70
                self.match(MiniJavaParser.ASSIGN)
                self.state = 71
                localctx.expr = self.arithmetics(0)
                self.state = 72
                self.match(MiniJavaParser.SEMICOLON)
                pass

            elif la_ == 2:
                localctx = MiniJavaParser.LogicalAssContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(MiniJavaParser.VARIABLE)
                self.state = 75
                self.match(MiniJavaParser.ASSIGN)
                self.state = 76
                localctx.expr = self.logical(0)
                self.state = 77
                self.match(MiniJavaParser.SEMICOLON)
                pass

            elif la_ == 3:
                localctx = MiniJavaParser.StringAssContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(MiniJavaParser.VARIABLE)
                self.state = 80
                self.match(MiniJavaParser.ASSIGN)
                self.state = 81
                self.match(MiniJavaParser.STRING)
                self.state = 82
                self.match(MiniJavaParser.SEMICOLON)
                pass

            elif la_ == 4:
                localctx = MiniJavaParser.CharAssContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.match(MiniJavaParser.VARIABLE)
                self.state = 84
                self.match(MiniJavaParser.ASSIGN)
                self.state = 85
                self.match(MiniJavaParser.CHAR)
                self.state = 86
                self.match(MiniJavaParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentsForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_assignmentsFor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArithmeticsAssContext(AssignmentsForContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.AssignmentsForContext
            super().__init__(parser)
            self.expr = None # ArithmeticsContext
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)
        def ASSIGN(self):
            return self.getToken(MiniJavaParser.ASSIGN, 0)
        def arithmetics(self):
            return self.getTypedRuleContext(MiniJavaParser.ArithmeticsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticsAss" ):
                listener.enterArithmeticsAss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticsAss" ):
                listener.exitArithmeticsAss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticsAss" ):
                return visitor.visitArithmeticsAss(self)
            else:
                return visitor.visitChildren(self)



    def assignmentsFor(self):

        localctx = MiniJavaParser.AssignmentsForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignmentsFor)
        try:
            localctx = MiniJavaParser.ArithmeticsAssContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(MiniJavaParser.VARIABLE)
            self.state = 90
            self.match(MiniJavaParser.ASSIGN)
            self.state = 91
            localctx.expr = self.arithmetics(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_arithmetics

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AtomArithmContext(ArithmeticsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ArithmeticsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MiniJavaParser.INT, 0)
        def FLOAT(self):
            return self.getToken(MiniJavaParser.FLOAT, 0)
        def VARIABLE(self):
            return self.getToken(MiniJavaParser.VARIABLE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomArithm" ):
                listener.enterAtomArithm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomArithm" ):
                listener.exitAtomArithm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomArithm" ):
                return visitor.visitAtomArithm(self)
            else:
                return visitor.visitChildren(self)


    class ParenArithmContext(ArithmeticsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ArithmeticsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)
        def arithmetics(self):
            return self.getTypedRuleContext(MiniJavaParser.ArithmeticsContext,0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenArithm" ):
                listener.enterParenArithm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenArithm" ):
                listener.exitParenArithm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenArithm" ):
                return visitor.visitParenArithm(self)
            else:
                return visitor.visitChildren(self)


    class OpArithmContext(ArithmeticsContext):
